# cf-solver

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cf_solver/: __init__.py  solver.py
