[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-solver"
version = "0.1.0"
description = "High-performance Cloudflare challenge solver using zendriver"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Devender Gupta" }]
dependencies = [
    "zendriver",
    "latest-user-agents",
    "user-agents",
]
requires-python = ">=3.8"
keywords = ["cloudflare", "solver", "scraping", "automation", "zendriver", "turnstile"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/devendergupta/cf-solver"
Bug-Tracker = "https://github.com/devendergupta/cf-solver/issues"
Documentation = "https://github.com/devendergupta/cf-solver#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["cf_solver*"]
